# shape-recognition

./: .gitignore  CMakeLists.txt  Makefile  MedialGraph.h  README.md  medialAxis.cpp  showMedialAxis.sh
data/: .gitignore  convex  convex.in  human  human.in  maple  maple.in  rect
include/: Image.h  Medial.h  MedialGraph.h  MedialPath.h  MedialPoint.h
src/: Image.cpp  Medial.cpp  MedialGraph.cpp  MedialPath.cpp  MedialPoint.cpp  main.cpp  medialAxis.cpp
tools/: README.md  clean.sh  drawCircle.m  normalize.cpp  showMedialAxis.sh  visualize.m
